minor changes app.config

--- a/configs/app.conf
+++ b/configs/app.conf
@@ -1,6 +1,6 @@
 [file_path]
-source_folder = D:/SRC/*
-destination_folder = D:/DST
+source_folder = /var/log/mysql_file_copy/src/
+destination_folder = /var/log/mysql_file_copy/dst/
 [service_path]
 service_path_command = /etc/init.d/mysql
 [logger]
