add unzip command - revision 1

--- a/configs/app.conf
+++ b/configs/app.conf
@@ -1,6 +1,7 @@
 [file_path]
-source_folder = /var/log/mysql_file_copy/src/
+source_folder = /home/airduka-database-backups/AirDuka/SRC/
 destination_folder = /var/log/mysql_file_copy/dst/
+compressed_file_source_folder = /home/airduka-database-backups/AirDuka/
 [service_path]
 service_path_command = /etc/init.d/mysql
 [logger]
