added mysql config params in app.cnf file

--- a/configs/app.conf
+++ b/configs/app.conf
@@ -6,3 +6,6 @@ compressed_file_source_folder = /home/airduka-database-backups/AirDuka/
 service_path_command = /etc/init.d/mysql
 [logger]
 log_file = /var/log/mysql_file_copy/app.log
+[mysql]
+user = root
+password =
