--- a/configs/app.conf
+++ b/configs/app.conf
@@ -7,5 +7,5 @@ service_path_command = /etc/init.d/mysql
 [logger]
 log_file = /var/log/mysql_file_copy/app.log
 [mysql]
-user = root
-password =
+db_user = root
+db_password =
